--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpeg") top center;
+  background: url("../img/jeja/WhatsApp Image 2024-05-30 at 8.11.52 PM.jpeg") top center;
   background-size: cover;
   padding: 0 15px;
 }
