--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("../img/jeja.jpg") top center;
+  background: url("https://d2ms8rpfqc4h24.cloudfront.net/mobile_application_development_ad3f711b7d.jpg") top center;
   background-size: cover;
   padding: 0 15px;
 }
