--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("assets/img/jejaa.jpeg") top center;
+  background: url("../img/jejaa.jpeg") top center;
   background-size: cover;
   padding: 0 15px;
 }
