--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("https://images.spiceworks.com/wp-content/uploads/2023/10/12122423/mobile-app-development.jpg") top center;
+  background: url("assets/img/jeja.jpeg") top center;
   background-size: cover;
   padding: 0 15px;
 }
