--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("assets/img/WhatsApp Image 2024-06-01 at 7.06.14 PM.jpeg") top center;
+ background: #f8ba88;
   background-size: cover;
   padding: 0 15px;
 }
