--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -331,7 +331,7 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
- background: #f8ba88;
+background: url("assets\img\jeja.jpeg") top center;
   background-size: cover;
   padding: 0 15px;
 }
