--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,11 +341,11 @@ background: url("../img/jeja.jpeg") top center;
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #070707;
+  color: #eeeeee;
 }
 
 #hero h2 {
-  color: #eee;
+  color: #eeeeee;
   margin-bottom: 10px;
   font-size: 24px;
   font-weight: 300;
